--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ h2 {
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    font-size: 16px;
     gap: 1rem;
     line-height: 1.7;
 }
@@ -138,7 +139,7 @@ h2 {
     max-height: 1rem;
 }
 
-.links{
+.links {
     color: black;
 }
 
@@ -151,7 +152,7 @@ h2 {
 }
 
 .profile_title {
-    font-size: 18px;
+    font-size: 20px;
 }
 
 
@@ -162,8 +163,8 @@ h2 {
     max-width: 50%;
 }
 
-@media screen and (max-width: 800px){
-    .about_me_block{
+@media screen and (max-width: 800px) {
+    .about_me_block {
         max-width: 100%;
     }
 }
@@ -180,6 +181,7 @@ h2 {
 }
 
 .condition_item {
+    user-select: none;
     display: inline-block;
     margin-bottom: 1rem;
     border-radius: 1rem;
@@ -190,6 +192,7 @@ h2 {
 }
 
 .skill_item {
+    user-select: none;
     display: inline-block;
     background-color: transparent;
     border: 2px solid #836fff;
