--- a/page.css
+++ b/page.css
@@ -117,6 +117,7 @@
 
 .signle_project {
     display: flex;
+    gap: 1rem;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -129,6 +130,7 @@
 .single_project_screenshot {
     max-width: 100%;
     height: auto;
+    border-radius: 1rem;
 }
 
 .single_project_descriptio {
