--- a/page.css
+++ b/page.css
@@ -19,7 +19,7 @@
     line-height: 1.7;
 }
 
-.profile_photo_wrapper {}
+/* .profile_photo_wrapper {} */
 
 .header_profile_photo {
     object-fit: cover;
@@ -29,7 +29,7 @@
     border-radius: 50%;
 }
 
-.subtitle {}
+/* .subtitle {} */
 
 .profile_title {
     font-size: 20px;
@@ -63,9 +63,9 @@
     }
 }
 
-.my_conditions {}
+/* .my_conditions {} */
 
-.conditions_list {}
+/*.conditions_list {} */ 
 
 .conditions_list>li {
     margin-left: 1rem;
@@ -89,7 +89,7 @@
     font-weight: bold;
 }
 
-.my_skills {}
+/* .my_skills {} */
 
 .subtutle {
     font-size: 16px;
@@ -113,7 +113,7 @@
     box-shadow: 0px 0px 10px 5px #a59f9f35;
 }
 
-.projects {}
+/*.projects {} */
 
 .signle_project {
     display: flex;
@@ -151,7 +151,7 @@
     font-size: 15px;
 }
 
-.about_me {}
+/* .about_me {} */
 
 h1,
 h2 {
